--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,9 @@
-# .htaccess - Security Configuration
+# .htaccess - Security Configuration (FIXED)
 RewriteEngine On
 
 # ================= SECURITY HEADERS =================
 <IfModule mod_headers.c>
-    # Clickjacking protection
+    # Clickjacking protection (CHỈ HOẠT ĐỘNG TỪ SERVER)
     Header always set X-Frame-Options "SAMEORIGIN"
     
     # XSS protection
@@ -15,8 +15,8 @@ RewriteEngine On
     # Referrer policy
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     
-    # Content Security Policy
-    Header always set Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://haiminh2023.github.io; connect-src 'self'; frame-ancestors 'self';"
+    # ❌ XÓA DÒNG NÀY - CSP sẽ do JavaScript xử lý
+    # Header always set Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://haiminh2023.github.io; connect-src 'self'; frame-ancestors 'self';"
     
     # Permissions Policy
     Header always set Permissions-Policy "camera=(), microphone=(), geolocation=()"
